[modify] 一些代码的优化改动